@@ -1,3 +1,12 @@
+2004-05-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* main.tcl: Implemented [SF Tcllib RFE 744109]. I.e. now diverting
+	  the user directly to the help intro message when calling dtp
+	  without arguments.
+
+	* lib/app-help/help.tcl (::app-help::run): Added formats 'text'
+	  and 'wiki' to the list. Mentioned in [SF Tcllib RFE 744109].
+
 2003-11-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* lib/tools/tools.tcl: Changed to understand the option '-out'.
@@ -15,7 +24,7 @@
 2003-05-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* lib/app-assemble/assemble.tcl (help text): Fixed two spelling
-	  errors. SF Tcllib Bug [737171].
+	  errors. [SF Tcllib Bug 737171].
 
 2003-03-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
